--- a/org/_portfolio/hbao/proj-hbao.org
+++ b/org/_portfolio/hbao/proj-hbao.org
@@ -22,4 +22,8 @@ gallery:
 ---
 #+END_HTML
 
+More details will be updated soon.
+
+Here is the [[https://github.com/stevegocoding/dx11_sdk][GitHub Repo]].
+
 {% include gallery %}
