--- a/org/_pages/about.org
+++ b/org/_pages/about.org
@@ -2,10 +2,26 @@
 #+BEGIN_HTML
 ---
 permalink: /about/
-title: "About Me"
+title: "About"
 layout: single
 author_profile: true
 ---
 #+END_HTML
 
-This is the about page
+I am a software professional with interesets in functional
+programming(Clojure and Scala) and Machine Learning and big data
+processing application using Apache Spark. 
+
+I was lured into programming by vedio game, Computer Graphics and real-time rendering
+stuff, and started my career in game industry as game developer. As getting older, I am being fascinated by the software systems
+that are close to the business, something producing more values for
+business, society and our world, then I transplanted myself to
+full-stack web development with JVM stack and looking at Distributed
+Computing, Big Data and Machine Learning as my future career
+development direction.
+
+I setup this site with Jekyll, GitHub and Org-mode with Emacs, as my
+portfolio site and Blogs. My hope is that I can share something I
+found interesting in my work and I can get connected more closely to
+the community.
+
